@@ -1,7 +1,6 @@
 package io.jespen.lib.rpc;
 
 import com.eclipsesource.json.JsonObject;
-import io.jespen.lib.GossipReqPd;
 import io.jespen.lib.Headers;
 import io.jespen.lib.Message;
 import io.jespen.lib.MsgType;
@@ -12,7 +11,6 @@ import java.io.IOException;
 import java.net.InetSocketAddress;
 import java.nio.ByteBuffer;
 import java.nio.channels.SocketChannel;
-import java.util.ArrayList;
 import java.util.concurrent.Executors;
 import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.TimeUnit;
@@ -21,7 +19,7 @@ public class SelectorCli implements AutoCloseable {
     private static ByteBuffer buffer;
     private static SelectorCli instance;
     private NodeV2 gossipNode;
-    private static final ScheduledExecutorService scheduler = Executors.newScheduledThreadPool(1);
+    private static final ScheduledExecutorService scheduler = Executors.newScheduledThreadPool(2);
 
 
     public static SelectorCli start(Broadcast broadcast) {
@@ -45,17 +43,17 @@ public class SelectorCli implements AutoCloseable {
     private Message getGossipMsg(String neighbor) {
         return new Message(MsgType.gossip,
                 new Headers(this.gossipNode.getNodeId(), neighbor),
-                new GossipReqPd(NodeV2.msgId.incrementAndGet(),
-                        new ArrayList<>(((Broadcast) this.gossipNode).getMessages()
-                                .keySet())));
+                this.gossipNode.getRpcPayload(neighbor).get());
     }
 
     public void sendGossip() {
 
         for (String neighbor : this.gossipNode.getTopology().get().get(gossipNode.getNodeId())) {
-            System.err.println("Sending gossip to neighbor: " + neighbor);
+//                System.err.println("Sending gossip to neighbor: " + neighbor);
             try (SocketChannel socketChannel = SocketChannel.open()) {
-                socketChannel.connect(new InetSocketAddress("127.0.0.1", gossipNode.getRpcPorts.apply(neighbor).get(0)));
+                socketChannel.connect(
+                        new InetSocketAddress("127.0.0.1",
+                                gossipNode.getRpcPorts.apply(neighbor).getFirst()));
                 Message message = getGossipMsg(neighbor);
                 JsonObject res = new JsonObject()
                         .add("src", message.headers().src())
@@ -66,12 +64,12 @@ public class SelectorCli implements AutoCloseable {
                 while (this.buffer.hasRemaining()) {
                     socketChannel.write(this.buffer);
                 }
+                this.gossipNode.updateTopology(neighbor, message);
             } catch (Exception e) {
                 e.printStackTrace();
                 System.err.println(e.getLocalizedMessage());
             }
         }
-
     }
 
     @Override
